fix: добавить text-overflow в попап с фотографией

--- a/blocks/popup/__photo-title/popup__photo-title.css
+++ b/blocks/popup/__photo-title/popup__photo-title.css
@@ -6,4 +6,9 @@
   line-height: 15px;
   margin: 0;
   padding: 0;
+  max-width: 240px;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
